# S132_Eigen

./: CMakeLists.txt  README.md
include/: NullSolver.hpp
tests/: CMakeLists.txt  null.cpp
